fixed overflow on mobile

--- a/src/layouts/Main/Main.module.scss
+++ b/src/layouts/Main/Main.module.scss
@@ -7,6 +7,8 @@
 
   display: grid;
   grid-template-rows: auto 1fr auto;
+
+  overflow: hidden;
 }
 
 .main {
